--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "Modmail",
     "description": "An easy to install Modmail bot for Discord - DM to contact mods!",
-    "repository": "https://github.com/kyb3r/modmail",
+    "repository": "https://github.com/wud901/kyb3rmodmail-beta",
     "env": {
         "TOKEN": {
             "description": "Your discord bot's token.",
