--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,8 @@ authors = [
     'Taki <noemail@example.com>'
 ]
 readme = 'README.md'
-repository = 'https://github.com/kyb3r/modmail'
-homepage = 'https://github.com/kyb3r/modmail'
+repository = 'https://github.com/wud901/kyb3rmodmail-beta'
+homepage = 'https://github.com/wud901/kyb3rmodmail-beta'
 keywords = ['discord', 'modmail']
 
 [tool.poetry.dependencies]
