--- a/core/config_help.json
+++ b/core/config_help.json
@@ -845,7 +845,7 @@
     ]
   },
   "data_collection": {
-    "default": "Yes",
+    "default": "No",
     "description": "Controls if bot metadata should be sent to the development team.",
     "examples": [
     ],
